# django_stripe_api

./: .env  .gitignore  Makefile  README.md  db.sqlite3  manage.py  pyproject.toml  settings.py  setup.cfg  Тестовое задание.odt
static/css/: checkout.css
static/js/: checkout.js
stripe_api_payment/: asgi.py  settings.py  urls.py  wsgi.py
stripe_api_payment/payments/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
stripe_api_payment/payments/migrations/: 0001_initial.py
templates/: item_detail.html  order_detail.html  success.html
templates/inc/: _navbar.html  _pagination.html
