[tool.poetry]
name = "django_stripe_api"
version = "0.1.0"
description = "Django Stripe API"
authors = ["Adrianus West <adrianus_west@protonmail.com>"]
license = "MIT"
readme = "README.md"
homepage = ""
repository = "https://github.com/AdrianusWest/django_stripe_api"
packages = [
  { include = "stripe_api_payment" },
]

[tool.poetry.dependencies]
python = "^3.11.3"
Django = "^4.2.4"
stripe = "^6.0.0"
python-dotenv = "^1.0.0"

[tool.poetry.dev-dependencies]
flake8 = "^6.0.0"
flake8-blind-except = "^0.2.1"
flake8-bugbear = "^23.1.20"
flake8-builtins = "^2.1.0"
flake8-cognitive-complexity = "^0.1.0"
flake8-commas = "^2.1.0"
flake8-comprehensions = "^3.10.1"
flake8-debugger = "^4.1.2"
flake8-docstrings = "^1.7.0"
flake8-import-order = "^0.18.2"
flake8-mutable = "^1.2.0"
flake8-polyfill = "^1.0.2"
flake8-print = "^5.0.0"
flake8-string-format = "^0.3.0"
pep8-naming = "^0.13.3"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
